[package]
name = "raytracing"
version = "0.1.0"
authors = ["Marco Cutecchia <marco.cutecchia@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
indicatif = "0.15.0"
png = "0.16.8"
clap = "3.0.0-beta.2"
rayon = "1.5.0"